[gd_scene load_steps=7 format=3 uid="uid://c8il7jjf0fa82"]

[ext_resource type="Script" path="res://GameView.gd" id="1_7sxog"]
[ext_resource type="PackedScene" uid="uid://4kb5ed2x7f8m" path="res://top_down.tscn" id="2_tqvqn"]
[ext_resource type="AudioStream" uid="uid://6guvma1lsglw" path="res://assets/music/GHGO2022_ACTION.ogg" id="3_s5o26"]
[ext_resource type="AudioStream" uid="uid://81d26etwxitu" path="res://assets/music/GHGO2022_PLANNING_OPO.ogg" id="4_kxn56"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2nev"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_ix8uy"]
Button/styles/normal = SubResource("StyleBoxFlat_o2nev")

[node name="GameView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7sxog")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelView" type="SubViewportContainer" parent="HBoxContainer"]
layout_mode = 2
offset_right = 702.0
offset_bottom = 540.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="HBoxContainer/LevelView"]
handle_input_locally = false
size = Vector2i(702, 540)
render_target_update_mode = 4

[node name="LoadLevelHere" type="Node2D" parent="HBoxContainer/LevelView/SubViewport"]

[node name="Node2D" parent="HBoxContainer/LevelView/SubViewport/LoadLevelHere" instance=ExtResource("2_tqvqn")]

[node name="CanvasLayer" type="CanvasLayer" parent="HBoxContainer/LevelView/SubViewport"]

[node name="RunGame" type="Button" parent="HBoxContainer/LevelView/SubViewport/CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.1
anchor_bottom = 0.95
offset_top = -31.0
offset_right = 58.0
grow_vertical = 0
focus_mode = 0
theme = SubResource("Theme_ix8uy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Run it!"

[node name="Retry" type="Button" parent="HBoxContainer/LevelView/SubViewport/CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.9
anchor_right = 0.85
anchor_bottom = 0.95
offset_top = -31.0
offset_right = 58.0
grow_vertical = 0
focus_mode = 0
theme = SubResource("Theme_ix8uy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Retry?"

[node name="GamePlan" type="Control" parent="HBoxContainer"]
layout_mode = 2
anchors_preset = 0
offset_left = 706.0
offset_right = 940.0
offset_bottom = 540.0
size_flags_horizontal = 3

[node name="HideShow" type="Button" parent="HBoxContainer/GamePlan"]
layout_mode = 0
offset_left = -24.0
offset_top = 10.0
offset_right = -4.0
offset_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
text = ">"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/GamePlan"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/GamePlan/VBoxContainer"]
layout_mode = 2
offset_right = 234.0
offset_bottom = 26.0
size_flags_vertical = 1
text = "Actions"
horizontal_alignment = 1
clip_text = true

[node name="ItemList" type="ItemList" parent="HBoxContainer/GamePlan/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 234.0
offset_bottom = 540.0
size_flags_vertical = 3

[node name="ActionMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s5o26")
volume_db = -80.0
autoplay = true

[node name="PlanningMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kxn56")
autoplay = true

[connection signal="pressed" from="HBoxContainer/LevelView/SubViewport/CanvasLayer/RunGame" to="." method="start_move_pattern"]
[connection signal="pressed" from="HBoxContainer/LevelView/SubViewport/CanvasLayer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="HBoxContainer/GamePlan/HideShow" to="." method="toggle_sidebar"]

[editable path="HBoxContainer/LevelView/SubViewport/LoadLevelHere/Node2D"]
[editable path="HBoxContainer/LevelView/SubViewport/LoadLevelHere/Node2D/Path2D/PathFollow2D/Player"]
